добавлен функционал получения списка общих фильмов